--- a/style/styleIE.css
+++ b/style/styleIE.css
@@ -24,6 +24,7 @@ body
    margin-left: auto;
    margin-right: auto;
    height:154px;
+   text-align: center;
    
 }
 /*The menu style*/
@@ -33,6 +34,7 @@ body
    width:500px;
    margin-left: auto;
    margin-right: auto;
+   text-align: center;
    
 }
 /*The menu input style*/
@@ -44,7 +46,7 @@ body
     border:2px;
     border-radius:5px;
     border-color:darkblue;
-    border-style:outset
+    border-style:outset;
 }
 /*The content style*/
 #content
@@ -56,13 +58,12 @@ body
    margin-left: auto;
    margin-right: auto;
    opacity: 0.8;
+   text-align: center;
 }
 /*The content table style*/
 #content table
 {
     border-style:hidden;
-    
-    
 }
 /*The footer style*/
 #footer
@@ -73,6 +74,7 @@ body
    width:300px;
    margin-left: auto;
    margin-right: auto;
+   text-align: center;
    
 }
 /*The footer input style*/
@@ -84,7 +86,7 @@ body
     border:2px;
     border-radius:5px;
     border-color:darkblue;
-    border-style:outset
+    border-style:outset;
 }
 /*The unsorted list list item style*/
 ul li
