--- a/style/style.css
+++ b/style/style.css
@@ -15,6 +15,7 @@ body
    background-repeat: repeat-y;
    background-position: 0%,5%,10%,15%,20%,25%,30%,35%,40%,45%,50%,55%,60%,65%,70%,75%,80%,85%,90%,95%,100%;
    background-attachment: fixed;
+
    
 }
 /*The header style*/
@@ -25,6 +26,7 @@ body
    margin-left: auto;
    margin-right: auto;
    height:154px;
+   text-align: center;
    
 }
 /*The menu style*/
@@ -34,6 +36,7 @@ body
    width:500px;
    margin-left: auto;
    margin-right: auto;
+   text-align: center;
    
 }
 /*The menu input style*/
@@ -57,6 +60,7 @@ body
    margin-left: auto;
    margin-right: auto;
    opacity: 0.8;
+   text-align: center;
 }
 /*The content table style*/
 #content table
@@ -74,6 +78,7 @@ body
    width:300px;
    margin-left: auto;
    margin-right: auto;
+   text-align: center;
    
 }
 /*The footer input style*/
